--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,8 @@
         <a href="{% url 'top' %}">
             <i class="bi bi-star-fill font-17"></i><span>Топ</span>
         </a>
-        <a href="#">
-            <i class="bi bi-star-fill font-17"></i><span>Что это</span>
+        <a href="{% url 'w' %}">
+            <i class="bi bi-star-fill font-17"></i><span>Что это?</span>
         </a>
     </div>
 
