--- a/templates/contest/ranking.html
+++ b/templates/contest/ranking.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Мои баллы{% endblock %}
+{% block title %}Рейтинг{% endblock %}
 
 {% block content %}
 
