--- a/templates/contest/register.html
+++ b/templates/contest/register.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Регистрация</title>
-</head>
-<body>
-
-</body>
-</html>
-
-
 {% extends "base.html" %}
 
-{% block title %}Мои баллы{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block content %}
 
