--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 <div id="page">
     <!-- Навигация -->
     <div id="footer-bar" class="footer-bar footer-bar-detached">
-        <a href="{% url 'user_dashboard' %}" class="active-nav">
+        <a href="{% url 'user_dashboard' %}">
             <i class="bi bi-house-fill font-16"></i><span>Главная</span>
         </a>
         <a href="{% url 'top' %}">
