--- a/templates/contest/user_dashboard.html
+++ b/templates/contest/user_dashboard.html
@@ -10,19 +10,15 @@
                 <div class="content">
                     <h1 class="text-center font-800 font-30 mb-2">{{ user.name }}!</h1>
                     <p class="text-center font-13 mt-n2 mb-3">{{ user.department }}</p>
-                    <p>Ваши баллы: <strong>{{ user.total_points }}</strong></p>
+                    <h1 class="text-center font-800 font-30 mb-2">Ваши баллы: <br><strong>{{ user.total_points }}</strong></h1>
 
                     {% if message %}
-                        <p></p>
-
-
                         <div class="alert border-blue-dark alert-dismissible color-blue-dark rounded-s fade show"
                              role="alert">
                             <strong>Внимание! </strong> {{ message }}
                             <button type="button" class="btn-close opacity-20 font-11 pt-3 mt-1" data-bs-dismiss="alert"
                                     aria-label="Close"></button>
                         </div>
-
                     {% endif %}
 
                 </div>
