--- a/templates/contest/ranking.html
+++ b/templates/contest/ranking.html
@@ -8,12 +8,12 @@
         <div class="card-center">
             <div class="card card-style">
                 <div class="content">
-                    <h1>🏆 Рейтинг департаментов</h1>
+                    <h1>🏆 Рейтинг</h1>
                     <table>
                         <thead>
                         <tr>
                             <th>📌 Департамент</th>
-                            <th>⭐ Баллы</th>
+                            <th>🥣 Баллы</th>
                         </tr>
                         </thead>
                         <tbody id="department-ranking">
@@ -28,7 +28,7 @@
                         <thead>
                         <tr>
                             <th>👤 Пользователь</th>
-                            <th>⭐ Баллы</th>
+                            <th>🥣 Баллы</th>
                             <th>📌 Департамент</th>
                         </tr>
                         </thead>
