--- a/templates/contest/user_dashboard.html
+++ b/templates/contest/user_dashboard.html
@@ -10,7 +10,8 @@
                 <div class="content">
                     <h1 class="text-center font-800 font-30 mb-2">{{ user.name }}!</h1>
                     <p class="text-center font-13 mt-n2 mb-3">{{ user.department }}</p>
-                    <h1 class="text-center font-800 font-30 mb-2">Ваши баллы: <br><strong>{{ user.total_points }}</strong></h1>
+                    <p class="text-center font-13 mt-n2 mb-3">Ваши баллы: </p>
+                    <h1 class="text-center font-800 font-30 mb-2"><br><strong>{{ user.total_points }} 🥣</strong></h1>
 
                     {% if message %}
                         <div class="alert border-blue-dark alert-dismissible color-blue-dark rounded-s fade show"
