--- a/templates/contest/walkthrough.html
+++ b/templates/contest/walkthrough.html
@@ -6,9 +6,9 @@
 {% block content %}
 
 
-    <div class="card-top">
-        <p class="text-center font-10 mb-n3 color-white opacity-40">Наурыз мейрамы құтты болсын! Береке, молшылық және
-            қуаныш әкелсін!</p>
+    <div class="card-top mt-5" style="padding-left: 15px;padding-right: 15px;">
+        <h1 class="text-center font-10 mb-n3 color-white opacity-40">Наурыз мейрамы құтты болсын! Береке, молшылық және
+            қуаныш әкелсін!</h1>
     </div>
 
     <div class="splide single-slider slider-no-dots slider-no-arrows" id="single-slider-nauryz"
