--- a/templates/contest/user_dashboard.html
+++ b/templates/contest/user_dashboard.html
@@ -3,25 +3,29 @@
 {% block title %}Мои баллы{% endblock %}
 
 {% block content %}
+    <!-- Контент страницы -->
+    <div class="page-content mb-0 pb-0">
+        <div class="card card-style mb-0 bg-transparent shadow-0 bg-3 mx-0 rounded-0" data-card-height="cover">
+            <div class="card-center">
+                <div class="card card-style">
+                    <div class="content">
+                        <h1 class="text-center font-800 font-30 mb-2">{{ user.name }}!</h1>
+                        <p class="text-center font-13 mt-n2 mb-3">{{ user.department }}</p>
+                        <p class="text-center font-13 mt-n2 mb-3">Ваши баллы: </p>
+                        <h1 class="text-center font-800 font-30 mb-2"><br><strong>{{ user.total_points }} 🥣</strong>
+                        </h1>
 
-    <div class="card card-style mb-0 bg-transparent shadow-0 bg-3 mx-0 rounded-0" data-card-height="cover">
-        <div class="card-center">
-            <div class="card card-style">
-                <div class="content">
-                    <h1 class="text-center font-800 font-30 mb-2">{{ user.name }}!</h1>
-                    <p class="text-center font-13 mt-n2 mb-3">{{ user.department }}</p>
-                    <p class="text-center font-13 mt-n2 mb-3">Ваши баллы: </p>
-                    <h1 class="text-center font-800 font-30 mb-2"><br><strong>{{ user.total_points }} 🥣</strong></h1>
+                        {% if message %}
+                            <div class="alert border-blue-dark alert-dismissible color-blue-dark rounded-s fade show"
+                                 role="alert">
+                                <strong>Внимание! </strong> {{ message }}
+                                <button type="button" class="btn-close opacity-20 font-11 pt-3 mt-1"
+                                        data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                            </div>
+                        {% endif %}
 
-                    {% if message %}
-                        <div class="alert border-blue-dark alert-dismissible color-blue-dark rounded-s fade show"
-                             role="alert">
-                            <strong>Внимание! </strong> {{ message }}
-                            <button type="button" class="btn-close opacity-20 font-11 pt-3 mt-1" data-bs-dismiss="alert"
-                                    aria-label="Close"></button>
-                        </div>
-                    {% endif %}
-
+                    </div>
                 </div>
             </div>
         </div>
