--- a/templates/contest/ranking.html
+++ b/templates/contest/ranking.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <!-- Контент страницы -->
-    <div class="page-content">
-        <div class="card card-style mb-0 bg-transparent shadow-0 bg-3 mx-0 rounded-0" data-card-height="cover">
+    <div class="page-content header-clear-medium">
+        <div class="card card-style mb-0 bg-transparent shadow-0 bg-3 mx-0 rounded-0">
             <div class="card-center">
                 <div class="card card-style">
                     <div class="content">
