--- a/templates/contest/walkthrough.html
+++ b/templates/contest/walkthrough.html
@@ -10,7 +10,8 @@
 
 
         <div class="card-top mt-5" style="padding-left: 15px;padding-right: 15px;">
-            <h1 class="text-center font-10 mb-n3 color-white opacity-40">Наурыз мейрамы құтты болсын! Береке, молшылық
+            <h1 class="text-center mb-n3 color-white opacity-80">Наурыз мейрамы құтты болсын!
+                <br>Береке, молшылық
                 және
                 қуаныш әкелсін!</h1>
         </div>
