--- a/templates/contest/walkthrough.html
+++ b/templates/contest/walkthrough.html
@@ -10,8 +10,7 @@
 
 
         <div class="card-top mt-5" style="padding-left: 15px;padding-right: 15px;">
-            <h1 class="text-center font-14 mb-n3 color-white opacity-50">Наурыз мейрамы құтты болсын!
-                <br>Береке, молшылық
+            <h1 class="text-center font-14 mb-n3 color-white opacity-60">Наурыз мейрамы құтты болсын! Береке, молшылық
                 және
                 қуаныш әкелсін!</h1>
         </div>
