--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,14 @@
 <div id="page">
     <!-- Навигация -->
     <div id="footer-bar" class="footer-bar footer-bar-detached">
-        <a href="{% url 'user_dashboard' %}">
-            <i class="bi bi-house-fill font-16"></i><span>Главная</span>
-        </a>
         <a href="{% url 'top' %}">
             <i class="bi bi-star-fill font-17"></i><span>Топ</span>
         </a>
+        <a href="{% url 'user_dashboard' %}">
+            <i class="bi bi-house-fill font-16"></i><span>Главная</span>
+        </a>
         <a href="{% url 'w' %}">
-            <i class="bi bi-star-fill font-17"></i><span>Что это?</span>
+            <i class="bi bi-question-octagon font-17"></i><span>Что это?</span>
         </a>
     </div>
 
