--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
         <a href="{% url 'w' %}">
             <i class="bi bi-question-octagon font-17"></i><span>Что это?</span>
         </a>
-{#        <a href="{% url 'user_dashboard' %}">#}
-{#            <i class="bi bi-house-fill font-16"></i><span>Главная</span>#}
-{#        </a>#}
+        <a href="{% url 'user_dashboard' %}">
+            <i class="bi bi-house-fill font-16"></i><span>Главная</span>
+        </a>
     </div>
 
     {% block content %}
