--- a/templates/contest/walkthrough.html
+++ b/templates/contest/walkthrough.html
@@ -65,7 +65,7 @@
                                 <h1 class="color-white font-40 text-center">Добавляй ингредиент</h1>
                                 <p class="color-white text-center opacity-70">Кто первый – выбирает лучшее!</p>
                                 <p class="color-white font-16 text-center boxed-text-xl">
-                                    Первые, кто наберёт 5 баллов выбирают ингредиенты для Наурыз коже!
+                                    Топ 7 выбирают ингредиенты для Наурыз коже!
                                     Количество ограничено — не упусти свой шанс!
                                 </p>
                                 <p class="color-white font-16 text-center boxed-text-xl">
